--- a/index.html
+++ b/index.html
@@ -13,20 +13,55 @@
     .attribution { font-size: 11px; text-align: center; }
     .attribution a { color: hsl(228, 45%, 44%); }
   </style>
+  <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
   
-  Sedans
-  Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city 
-  or on your next road trip.
+  <div id="layout">
 
-  SUVs
-  Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation 
-  and off-road adventures.
+    <div class="car" id="sedan">
+      <div class="car-description">
+        <img src="images/icon-sedans.svg" alt="">
+        <h1>Sedans</h1>
+        <p>
+          Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city 
+          or on your next road trip.
+        </p>
+        <button>
+          Learn More
+        </button>
+      </div>
+    </div>
+  
+    <div class="car" id="suv">
+      <div class="car-description">
+        <img src="images/icon-suvs.svg" alt="">
+        <h1>SUVs</h1>
+        <p>
+          Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation 
+          and off-road adventures.
+        </p>
+        <button>
+          Learn More
+        </button>
+      </div>
+    </div>
+  
+    <div class="car" id="luxury">
+      <div class="car-description">
+        <img src="images/icon-luxury.svg" alt="">
+        <h1>Luxury</h1>
+        <p>
+          Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury 
+          rental and arrive in style.
+        </p>
+        <button>
+          Learn More
+        </button>
+      </div>
+    </div>
 
-  Luxury
-  Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury 
-  rental and arrive in style.
+  </div>
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
